# CustomizableContractionHierarchy

./: CMakeLists.txt  main.cpp  test.cpp
api/: CCH.cpp  CCH.hpp  CMakeLists.txt
core/: CMakeLists.txt  EliminationTree.hpp
customization/: BasicCustomizer.hpp  CMakeLists.txt  PerfectCustomizer.cpp  PerfectCustomizer.hpp
preprocessing/: CMakeLists.txt  RankOrderer.hpp
query/: CMakeLists.txt
src/api/: CCH.cpp  CCH.hpp  CMakeLists.txt  DecodeVector.cpp
src/core/: CMakeLists.txt  EliminationTree.cpp  EliminationTree.hpp  Graph.cpp  Graph.hpp
src/customization/: BasicCustomizer.cpp  BasicCustomizer.hpp  CMakeLists.txt  DistancePreprocessing.cpp  DistancePreprocessing.hpp  PerfectCustomizer.hpp
src/preprocessing/: CMakeLists.txt  ContractionBuilder.cpp  ContractionBuilder.hpp  RankOrderer.cpp  RankOrderer.hpp
src/query/: CMakeLists.txt  EliminationTreeQuery.cpp  EliminationTreeQuery.hpp
